xdr-soar-infra/6-frontend-ui/admin-panel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-panel
  namespace: xdr-soar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-ui
  template:
    metadata:
      labels:
        app: admin-ui
    spec:
      containers:
      - name: admin
        image: admin-frontend:latest
