xdr-soar-infra/6-frontend-ui/soar-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soar-dashboard
  namespace: xdr-soar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soar-ui
  template:
    metadata:
      labels:
        app: soar-ui
    spec:
      containers:
      - name: frontend
        image: soar-frontend:latest
